# cookiecutter-pymod

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.rst  Makefile  README.md  appveyor.yml  cookiecutter.json  dev-requirements.in  dev-requirements.txt  pypack.yml  pytest.ini  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pythonpackage.yml
docs/: Makefile  conf.py  index.rst  make.bat  prompts.rst  pypi_release_checklist.rst  troubleshooting.rst  tutorial.rst
hooks/: post_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: setup.py
{{cookiecutter.repo_name}}/: .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  Makefile  README.md  THANKS.md  pyproject.toml  setup.cfg  setup.py  tox.ini
{{cookiecutter.repo_name}}/.github/workflows/: pythonpackage.yml  tests.yml
{{cookiecutter.repo_name}}/docs/: conf.py  index.rst  installation.rst
{{cookiecutter.repo_name}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.repo_name}}/tests/: test_{{cookiecutter.project_slug}}.py
